--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory</title>
-    <link rel="stylesheet" href="../memory game/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>MEMORY game</h1>
     </header>
     <main>
+        <div class="deck">
+            <div class="top-deck">
+                <div class="card_cont" id="card_cont_1"></div>
+                <div class="card_cont" id="card_cont_2"></div>
+                <div class="card_cont" id="card_cont_3"></div>
+            </div>
+            <div class="middle-deck">
+                <div class="card_cont" id="card_cont_4"></div>
+                <div class="card_cont" id="card_cont_5"></div>
+                <div class="card_cont" id="card_cont_6"></div>
+            </div>
+            <div class="bottom-deck">
+                <div class="card_cont" id="card_cont_7"></div>
+                <div class="card_cont" id="card_cont_8"></div>
+                <div class="card_cont" id="card_cont_9"></div>
+            </div>
+        </div>
     </main>
 </body>
-<script src="../memory game/script.js"></script>
+<script src="script.js"></script>
+
 </html>
