--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     <main>
         <div class="deck">
             <div class="top-deck">
-                <div class="card_cont" id="card_cont_1" onclick="showCard(this)">A</div>
-                <div class="card_cont" id="card_cont_2" onclick="showCard(this)">C</div>
-                <div class="card_cont" id="card_cont_3" onclick="showCard(this)">B</div>
+                <div class="card_cont" id="card_cont_1" onclick="showCard(this)"><div class="figlio"></div></div>
+                <div class="card_cont" id="card_cont_2" onclick="showCard(this)"><div class="figlio"></div></div>
+                <div class="card_cont" id="card_cont_3" onclick="showCard(this)"><div class="figlio"></div></div>
             </div>
             <div class="middle-deck">
-                <div class="card_cont" id="card_cont_4" onclick="showCard(this)">C</div>
-                <div class="card_cont" id="card_cont_5" onclick="showCard(this)">B</div>
-                <div class="card_cont" id="card_cont_6" onclick="showCard(this)">A</div>
+                <div class="card_cont" id="card_cont_4" onclick="showCard(this)"><div class="figlio"></div></div>
+                <div class="card_cont" id="card_cont_5" onclick="showCard(this)"><div class="figlio"></div></div>
+                <div class="card_cont" id="card_cont_6" onclick="showCard(this)"><div class="figlio"></div></div>
             </div>
             <div class="bottom-deck">
-                <div class="card_cont" id="card_cont_7" onclick="showCard(this)">D</div>
-                <div class="card_cont" id="card_cont_8" onclick="showCard(this)">D</div>
+                <div class="card_cont" id="card_cont_7" onclick="showCard(this)"><div class="figlio"></div></div>
+                <div class="card_cont" id="card_cont_8" onclick="showCard(this)"><div class="figlio"></div></div>
             </div>
         </div>
     </main>
